fix a couple layout issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -113,7 +113,7 @@ h1 {
 
 .screen-win-one p:before {
   content: "o";
-  top: 3.45rem;
+  top: 3.3rem;
   font-size: 27.0rem; 
 }
 
@@ -127,7 +127,7 @@ h1 {
 
 .screen-win-two p:before {
   content: "×";
-  top: 6.1rem;
+  top: 4.6rem;
   font-size: 27.0rem; 
 }
 
@@ -143,7 +143,7 @@ h1 {
   color: rgba(0, 0, 0, 0.2);
   text-align: center;
   position: absolute;
-  top: 1rem;
+  top: 5%;
   width: 35%;
   padding: 1.25em 1.0em 1em;
   outline: 1px solid #ccc;
